added new show image process builder